--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <title>The addam</title>
 
-  <link rel="stylesheet" href="/public/main.css">
-  <link rel="stylesheet" href="/public/page-landing.css">
+  <link rel="stylesheet" href="/public/css/main.css">
+  <link rel="stylesheet" href="/public/css/page-landing.css">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
