Change Addam for Adam

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section class="profile">
 
-          <h1>Addam</h1>
+          <h1>Adam</h1>
           <span>Developer</span>
 
         </section>
